--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMnzIQXRDWB/pPMNCbuA2Hf",
+      "authorship_tag": "ABX9TyO2di1DrJyd9v2hOk0U/ACj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,6 +49,75 @@
         "import numpy as np\n",
         "list=[1,2,3,4,4,5,6]\n",
         "print(list)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "List = [1, 2, 4, 4, 3, 3, 3, 6, 5]\n",
+        "print(\"\\nList with the use of Numbers: \")\n",
+        "print(List)\n",
+        "List = [1, 2, 'Geeks', 4, 'For', 6, 'Geeks']\n",
+        "print(\"\\nList with the use of Mixed Values: \")\n",
+        "print(List)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-P4WHyZJOJp_",
+        "outputId": "d193208f-115b-4a06-974d-24e7ce554310"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "List with the use of Numbers: \n",
+            "[1, 2, 4, 4, 3, 3, 3, 6, 5]\n",
+            "\n",
+            "List with the use of Mixed Values: \n",
+            "[1, 2, 'Geeks', 4, 'For', 6, 'Geeks']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "arr1=np.array([1,2,3,4,5])\n",
+        "arr2=np.array([1,3,2,4,5])\n",
+        "arr3=arr1+arr2\n",
+        "arr4=arr1*arr3\n",
+        "arr5=arr1-arr4\n",
+        "arr6=arr3/arr4\n",
+        "print(\"the product of array is\",arr4)\n",
+        "print(\"the multiplication of array is\",arr3)\n",
+        "print(\"the substration of array is\",arr5)\n",
+        "print(\"the divide of array is\",arr6)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_L_eDKlUSEC8",
+        "outputId": "fa31f6e8-c739-443d-bcae-e8081552b81f"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "the product of array is [ 2 10 15 32 50]\n",
+            "the multiplication of array is [ 2  5  5  8 10]\n",
+            "the substration of array is [ -1  -8 -12 -28 -45]\n",
+            "the divide of array is [1.         0.5        0.33333333 0.25       0.2       ]\n"
+          ]
+        }
       ]
     }
   ]
