--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO2di1DrJyd9v2hOk0U/ACj",
+      "authorship_tag": "ABX9TyPOo7NLTY1oNvFM2YsQ8cAx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -116,6 +116,46 @@
             "the multiplication of array is [ 2  5  5  8 10]\n",
             "the substration of array is [ -1  -8 -12 -28 -45]\n",
             "the divide of array is [1.         0.5        0.33333333 0.25       0.2       ]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "List = []\n",
+        "print(\"Blank List: \")\n",
+        "print(List)\n",
+        "List = [10, 20, 14]\n",
+        "print(\"\\nList of numbers: \")\n",
+        "print(List)\n",
+        "List = [\"Geeks\", \"For\", \"Geeks\"]\n",
+        "print(\"\\nList Items: \")\n",
+        "print(List[0])\n",
+        "print(List[2])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D_1fF3GUSlAO",
+        "outputId": "a9f5e3c9-6b65-4a19-d048-9880176a9636"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Blank List: \n",
+            "[]\n",
+            "\n",
+            "List of numbers: \n",
+            "[10, 20, 14]\n",
+            "\n",
+            "List Items: \n",
+            "Geeks\n",
+            "Geeks\n"
           ]
         }
       ]
