--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPOo7NLTY1oNvFM2YsQ8cAx",
+      "authorship_tag": "ABX9TyPhB4fo1HvCG2w1UACMyKO9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -156,6 +156,50 @@
             "List Items: \n",
             "Geeks\n",
             "Geeks\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#using numpy creationof sine,log and exponential of two arrays\n",
+        "import numpy as np\n",
+        "arr1=np.array([10,20,30,40,50])\n",
+        "arr2=np.array([12,3,5,4,2])\n",
+        "arr3=np.sin(arr1)\n",
+        "arr4=np.cos(arr2)\n",
+        "arr5=np.tan(arr2)\n",
+        "arr6=np.log(arr1)\n",
+        "arr7=np.exp(arr1)\n",
+        "arr8=np.log2(arr2)\n",
+        "print(arr3)\n",
+        "print(arr4)\n",
+        "print(arr5)\n",
+        "print(arr6)\n",
+        "print(arr7)\n",
+        "print(arr8)"
+      ],
+      "metadata": {
+        "id": "HwrV9zeuTU5F",
+        "outputId": "2764d794-2f5c-4182-afa4-4fbd8614a772",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[-0.54402111  0.91294525 -0.98803162  0.74511316 -0.26237485]\n",
+            "[ 0.84385396 -0.9899925   0.28366219 -0.65364362 -0.41614684]\n",
+            "[-0.63585993 -0.14254654 -3.38051501  1.15782128 -2.18503986]\n",
+            "[2.30258509 2.99573227 3.40119738 3.68887945 3.91202301]\n",
+            "[2.20264658e+04 4.85165195e+08 1.06864746e+13 2.35385267e+17\n",
+            " 5.18470553e+21]\n",
+            "[3.5849625  1.5849625  2.32192809 2.         1.        ]\n"
           ]
         }
       ]
